# eshgham

./: .gitignore  README.md  autorelease-env.sh  setup.cfg
.github/workflows/: autorelease-deploy.yml  autorelease-gh-rel.yml  autorelease-prep.yml  ci.yaml
eshgham/: __init__.py  __main__.py
eshgham/.autorelease/: test-testpypi
eshgham/tests/: test_getdata.py  test_main.py
ghadash/: __init__.py
