[metadata]
name = eshgham
version = 0.0.1.dev0
# version should end in .dev0 if this isn't to be released
short_description =
    A dashboard to check the status of your neglected GitHub Actions Workflows.
description = 
    A dashboard to check the status of your neglected GitHub Actions Workflows.
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson
author_email = dwhs@hyperblazer.net
license = MIT
url = https://github.com/dwhswenson/ghadash
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
install_requires =
    pygithub
    colorama
    pyyaml
packages = find:

[options.extras_require]
test = 
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    eshgham = eshgham:main
